--- a/home.html
+++ b/home.html
@@ -192,32 +192,31 @@
 </section>
 
 <!-- 4th section -->
-<!-- New section for images -->
+
 <section class="py-16 bg-white">
-    <div class="container mx-auto px-8">
-        <h2 class="text-3xl font-semibold text-teal-500 mb-4 text-center">Our Featured Images</h2>
-        <div class="flex flex-wrap justify-between space-y-6 md:space-y-0 md:space-x-6">
-            
-            <!-- Left side with 6 images -->
-            <div class="w-full md:w-2/3 grid grid-cols-2 gap-6">
-                <div><img src="./images/imgi_11_gallery-1.jpg" alt="Image 1" class="w-full h-auto object-cover rounded-lg shadow-lg" /></div>
-                <div><img src="./images/imgi_12_gallery-2.jpg" alt="Image 2" class="w-full h-auto object-cover rounded-lg shadow-lg" /></div>
-                <div><img src="./images/imgi_13_gallery-3.jpg" alt="Image 3" class="w-full h-auto object-cover rounded-lg shadow-lg" /></div>
-                <div><img src="./images/imgi_15_gallery-5.jpg" alt="Image 4" class="w-full h-auto object-cover rounded-lg shadow-lg" /></div>
-                <div><img src="./images/imgi_16_gallery-6.jpg" alt="Image 5" class="w-full h-auto object-cover rounded-lg shadow-lg" /></div>
-                <div><img src="./images/imgi_17_gallery-7.jpg" alt="Image 6" class="w-full h-auto object-cover rounded-lg shadow-lg" /></div>
-            </div>
+  <div class="container mx-auto px-8">
+    <h2 class="text-3xl font-semibold text-teal-500 mb-8 text-center">
+      Our Featured Images
+    </h2>
 
-           <!-- Right side with 1 image -->
-            <div class="w-full md:w-1/3 flex justify-center md:justify-start">
-                <img src="./images/imgi_14_gallery-4.jpg" alt="Image 7" class="w-full h-auto object-cover rounded-lg shadow-lg" />
-            </div>
-        </div>
-            </div>
-        </div>
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+      <!-- Left side (2/3 width) -->
+      <div class="md:col-span-2 grid grid-cols-2 gap-6">
+        <img src="./images/imgi_11_gallery-1.jpg" alt="Image 1" class="w-full h-auto object-cover rounded-lg shadow-lg">
+        <img src="./images/imgi_12_gallery-2.jpg" alt="Image 2" class="w-full h-auto object-cover rounded-lg shadow-lg">
+        <img src="./images/imgi_13_gallery-3.jpg" alt="Image 3" class="w-full h-auto object-cover rounded-lg shadow-lg">
+        <img src="./images/imgi_15_gallery-5.jpg" alt="Image 4" class="w-full h-auto object-cover rounded-lg shadow-lg">
+        <img src="./images/imgi_16_gallery-6.jpg" alt="Image 5" class="w-full h-auto object-cover rounded-lg shadow-lg">
+        <img src="./images/imgi_17_gallery-7.jpg" alt="Image 6" class="w-full h-auto object-cover rounded-lg shadow-lg">
+      </div>
+
+      <!-- Right side (1/3 width) -->
+      <div class="flex">
+        <img src="./images/imgi_14_gallery-4.jpg" alt="Image 7" class="w-full h-auto object-cover rounded-lg shadow-lg">
+      </div>
     </div>
+  </div>
 </section>
-
 
 
 <!-- footer section -->
