--- a/home.html
+++ b/home.html
@@ -196,11 +196,11 @@
 <section class="py-16 bg-white">
   <div class="container mx-auto px-8">
     <h2 class="text-3xl font-semibold text-teal-500 mb-8 text-center">
-      Our Featured Images
+      SKIN CARE 
     </h2>
 
     <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-      <!-- Left side (2/3 width) -->
+    
       <div class="md:col-span-2 grid grid-cols-2 gap-6">
         <img src="./images/imgi_11_gallery-1.jpg" alt="Image 1" class="w-full h-auto object-cover rounded-lg shadow-lg">
         <img src="./images/imgi_12_gallery-2.jpg" alt="Image 2" class="w-full h-auto object-cover rounded-lg shadow-lg">
@@ -210,7 +210,7 @@
         <img src="./images/imgi_17_gallery-7.jpg" alt="Image 6" class="w-full h-auto object-cover rounded-lg shadow-lg">
       </div>
 
-      <!-- Right side (1/3 width) -->
+      
       <div class="flex">
         <img src="./images/imgi_14_gallery-4.jpg" alt="Image 7" class="w-full h-auto object-cover rounded-lg shadow-lg">
       </div>
