--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </style>
 </head>
 <body class="bg-gray-100">
-    
+
 <!-- navbar section-->
    <nav class="bg-white shadow-md">
     <div class="flex justify-between items-center px-6 py-4">
@@ -96,3 +96,5 @@
     </div>
   </div>
 </footer>
+</body> 
+</html>
