--- a/about.html
+++ b/about.html
@@ -121,7 +121,7 @@
         <h1 class="text-2xl">Welcome to the Aesthetic</h1>
         <p>
           Aesthetic, ipsum dolor sit amet consectetur adipisicing elit.
-          Doloremque iste nam velit voluptatum temporibus.
+          Doloremque istes nam velit voluptatum temporibus.
         </p>
         <ul class="list-disc">
           <li>Routine and medical care</li>
