--- a/home.html
+++ b/home.html
@@ -28,8 +28,8 @@
       
       <ul class="hidden md:flex space-x-8">
         <li><a href="#home" class="text-lg font-medium hover:text-teal-500">Home</a></li>
-        <li><a href="#about" class="text-lg font-medium hover:text-teal-500">About</a></li>
-        <li><a href="#services" class="text-lg font-medium hover:text-teal-500">Services</a></li>
+        <li><a href="about.html" class="text-lg font-medium hover:text-teal-500">About</a></li>
+        <li><a href="services.html" class="text-lg font-medium hover:text-teal-500">Services</a></li>
         <li><a href="#news" class="text-lg font-medium hover:text-teal-500">News</a></li>
         <li><a href="#contact" class="text-lg font-medium hover:text-teal-500">Contact</a></li>
         <li><a href="#appointment" class="bg-teal-500 text-white px-6 py-2 rounded-full hover:bg-teal-400">Appointment</a></li>
